--- a/exercícios/ex022/fundo006.html
+++ b/exercícios/ex022/fundo006.html
@@ -4,20 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documento</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
-            background-image: url("imagens/wallpaper002.jpg");
-            background-position: center center;
-            background-repeat: no-repeat;
-            background-size: cover;
+           background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+           background-size: cover;
         }
 
         main {
             background: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,7 +25,14 @@
 <body>
     <main>
         <h1>Teste de imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, officia provident corporis dolor voluptatem, non ut amet deserunt nobis deleniti unde! Nam maxime ullam provident non, quae rem! Laudantium, minus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni quaerat reiciendis cumque possimus, nihil quisquam sequi deserunt autem? Quidem optio provident adipisci vitae magnam officiis excepturi earum alias, tempora obcaecati?Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente vero optio, iure incidunt id assumenda dicta eos inventore maiores totam exercitationem in quis reiciendis nesciunt dolore placeat non error quas.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, officia provident corporis dolor voluptatem, non ut amet deserunt nobis deleniti unde! Nam maxime ullam provident non, quae rem! Laudantium, minus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni quaerat reiciendis cumque possimus, nihil quisquam sequi deserunt autem? Quidem optio provident adipisci vitae magnam officiis excepturi earum alias, tempora obcaecati?Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente vero optio, iure incidunt id assumenda dicta eos inventore maiores totam exercitationem in quis reiciendis nesciunt dolore placeat non error quas.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis veniam esse, nihil obcaecati id qui, culpa fugit doloribus repudiandae, voluptatum libero dicta maiores numquam? Labore delectus voluptas error iure autem.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos facere necessitatibus enim adipisci. Sit eum porro explicabo quod perspiciatis quasi cumque exercitationem vitae? Quasi cum nam, inventore et neque odio.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto laborum quisquam eos? Excepturi esse animi necessitatibus similique doloribus error quasi tempora sit omnis. Minima, magni repellat adipisci enim alias distinctio Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae voluptate hic fugiat architecto fuga, officia, omnis consequuntur explicabo velit tenetur quibusdam ipsum necessitatibus consequatur at obcaecati nisi provident! Officiis, beatae. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae dolorem obcaecati quas, adipisci voluptatem iste libero repellat assumenda quidem architecto maxime asperiores quaerat veritatis totam sed quis sint in velit.Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, officia provident corporis dolor voluptatem, non ut amet deserunt nobis deleniti unde! Nam maxime ullam provident non, quae rem! Laudantium, minus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni quaerat reiciendis cumque possimus, nihil quisquam sequi deserunt autem? Quidem optio provident adipisci vitae magnam officiis excepturi earum alias, tempora obcaecati?Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente vero optio, iure incidunt id assumenda dicta eos inventore maiores totam exercitationem in quis reiciendis nesciunt dolore placeat non error quas.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis veniam esse, nihil obcaecati id qui, culpa fugit doloribus repudiandae, voluptatum libero dicta maiores numquam? Labore delectus voluptas error iure autem.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos facere necessitatibus enim adipisci. Sit eum porro explicabo quod perspiciatis quasi cumque exercitationem vitae? Quasi cum nam, inventore et neque odio.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto laborum quisquam eos? Excepturi esse animi necessitatibus similique doloribus error quasi tempora sit omnis. Minima, magni repellat adipisci enim alias distinctio Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae voluptate hic fugiat architecto fuga, officia, omnis consequuntur explicabo velit tenetur quibusdam ipsum necessitatibus consequatur at obcaecati nisi provident! Officiis, beatae. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae dolorem obcaecati quas, adipisci voluptatem iste libero repellat assumenda quidem architecto maxime asperiores quaerat veritatis totam sed quis sint in velit.
+        </p>
     </main>
 </body>
 </html>
